# Parallelines

./: .coverage  .gitignore  README.md  config.toml  environment.yml  pyproject.toml
.github/workflows/: build.yml  experiment.yml
docs/: engine.md  user-guide.md
queries/: README.md  active_vmt_files.json  addon_full_profile.json  cascade_overrides.json  complete_dead_by_type.json  cross_map_pollution.json  dead_by_source.json  dead_files.json  dep_conflicts_cross_source.json  dependency_cycles.json  disabled_addons.json  entry_point_types.json  external_new_files.json  external_overlap.json  external_overridden.json  external_overrides.json  file_count_by_source.json  global_scripts.json  hash_conflicts.json  implicit_deps.json  infected_model_usage.json  isolated_packages.json  map_descendants.json  map_full_audio.json  map_soundscape_coverage.json  melee_weapon_chain.json  missing_deps.json  mod_type_summary.json  particle_coverage.json  redundant_by_source.json  safe_to_delete.json  script_mods.json  sound_chain.json  top_impact.json  ui_texture_usage.json
scripts/: build_exe.py  check.py  ci_audit.py  ci_env_snapshot.py  ci_sim_linux.sh  ci_sim_win.ps1  generate_ico.py  verify_ico.py
src/parallelines/: __main__.py  cli.py  cli_args.py  config.py  error_policy.py  exceptions.py  game_strategy.py  i18n.py  io.py  pipeline.py  query_cli.py  resource.py  sys_utils.py  types.py
tests/: conftest.py  test_cli.py  test_cli_ast_parser.py  test_cli_ast_rules.py  test_cli_ast_validator.py  test_config.py  test_i18n.py  test_io.py  test_resource.py  test_types.py
tests/adversarial/: test_environment_variables.py  test_file_location.py  test_io_audit_coverage.py  test_oracle_free.py  test_path_resolution.py  test_regression_bugs.py  test_terminal_encoding.py
tests/analysis/: test_addon_dep.py  test_anomaly_detectors.py  test_dead_file.py  test_dep_conflict.py  test_entry_points.py  test_hash_conflict.py  test_impact.py  test_isolated.py  test_map_conflict.py  test_mod_classify.py  (+1 more)
(+138 files in other folders)
